docs: Update CLAUDE.md with JDK 25 flag notes and gotchas
Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>